--- a/public/add_products.html
+++ b/public/add_products.html
@@ -9,18 +9,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="shop.js"></script>
-    <script src="index.js"></script>
-  
-    
+    <script src="add_products.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="p-4">
+        <h3 class="text-center">Add Product</h3>
         <div class="row">
-            <h2 align = "center" >Shop</h2>
-        </div>
-        <div class="row" id="product-list">
-            //data will be added here
-
+            <div class="col"></div>
+            <div class="col-6">
+                <form >
+                    <div class="form-group">
+                        <label for="productName">Product Name</label>
+                        <input type="text" id="productName">
+                    </div>
+                    <div class="form-group">
+                        <label for="productManufacturer">Manufaturer</label>
+                        <input type="text" id="productManufacturer">
+                    </div>
+                    <div class="form-group">
+                        <label for="productPrice">Price</label>
+                        <input type="number" id="productPrice">
+                    </div>
+                </form>
+                <button id="btnProductAdd" class="btn btn-info">ADD</button>
+            </div>
+            <div class="col"></div>
         </div>
     </div>
 </body>
